fixing bugs of form in responsive

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                                 </a>
                             </li>
                             <li class="main-header_navigation_item">
-                                <a href="tel:+998940090722" role="button"
+                                <a href="tel:+998555009988" role="button"
                                     class="main-header_navigation_button box-shadow">
-                                    +998940090722
+                                    +998555009988
                                 </a>
                             </li>
                             <li class="main-header_navigation_item lang">
@@ -138,7 +138,7 @@
                                 YETUK DIGITAL
                             </h1>
                             <h1 class="main-hero_heading">
-                                Digital-интегратор
+                                Подготовка ценных специалистов
                             </h1>
                             <button class="main-hero_contact_btn form_opener box-shadow">
                                 ПОЗВОНИТЬ
@@ -171,9 +171,25 @@
                 </div>
 
                 <div class="main-hero_form_info_wrapper">
-                    <label for="main_hero_form_comment">Комментарий</label>
-                    <textarea id="main_hero_form_comment" name="main_hero_form_comment "
-                        class="hero_comment main_hero_form_comment"></textarea>
+                    <label>Услуги</label>
+                    <label class="main-hero_form_label" for="vebsayt_ishlab_chiqarish">Веб Сайт</label>
+                    <input class="main-hero_form_inputs" type="checkbox" id="vebsayt_ishlab_chiqarish"
+                        value="Разработка сайта">
+                    <label class="main-hero_form_label" for="bitrix24_ni_tizimini_ornatish">Битрикс24</label>
+                    <input class="main-hero_form_inputs" type="checkbox" id="bitrix24_ni_tizimini_ornatish"
+                        value="Bitrix24 ni tizimini o'rnatish">
+                    <label class="main-hero_form_label" for="amocrm_tizimini_ornatish">amoCRM</label>
+                    <input class="main-hero_form_inputs" type="checkbox" id="amocrm_tizimini_ornatish"
+                        value="Amocrm tizimini o'rnatish">
+                    <label class="main-hero_form_label" for="telegram_bot_tayyorlash">Телеграмм-бот</label>
+                    <input class="main-hero_form_inputs" type="checkbox" id="telegram_bot_tayyorlash"
+                        value="Telegram bot tayyorlash">
+                    <label class="main-hero_form_label" for="ip_telefoniya_ulash">IP телефония</label>
+                    <input class="main-hero_form_inputs" type="checkbox" id="ip_telefoniya_ulash"
+                        value="IP telefoniya ulash">
+                    <label class="main-hero_form_label" for="ip_telefoniya_ulash">Sms сервис</label>
+                    <input class="main-hero_form_inputs" type="checkbox" id="ip_telefoniya_ulash"
+                        value="Sotuv bo'limi uchun sms xizmati va virtual raqam xizmati">
                 </div>
 
                 <button type="submit" class="main-hero_bot_sender">
@@ -934,6 +950,8 @@
                                     id="main-contact_comment"></textarea>
                                 <button type="submit" class="box-shadow">Отправить</button>
                             </form>
+
+
                         </li>
                     </ul>
                 </div>
