--- a/uz_index.html
+++ b/uz_index.html
@@ -88,7 +88,7 @@
                                 </a>
                             </li>
                             <li class="main-header_navigation_item">
-                                <a href="tel:+998940090722" role="button"
+                                <a href="tel:+998555009988" role="button"
                                     class="main-header_navigation_button box-shadow">
                                     +998555009988
                                 </a>
@@ -187,10 +187,10 @@
                     <label class="main-hero_form_label" for="telegram_bot_tayyorlash">Telegram bot</label>
                     <input class="main-hero_form_inputs" type="checkbox" id="telegram_bot_tayyorlash"
                         value="Telegram bot tayyorlash">
-                    <label class="main-hero_form_label" for="ip_telefoniya_ulash">IP telefoniya</label>
+                    <label class="main-hero_form_label" for="ip_telefoniya_ulash">IP телефония</label>
                     <input class="main-hero_form_inputs" type="checkbox" id="ip_telefoniya_ulash"
                         value="IP telefoniya ulash">
-                    <label class="main-hero_form_label" for="ip_telefoniya_ulash">Sms xizmati</label>
+                    <label class="main-hero_form_label" for="ip_telefoniya_ulash">Sms сервис</label>
                     <input class="main-hero_form_inputs" type="checkbox" id="ip_telefoniya_ulash"
                         value="Sotuv bo'limi uchun sms xizmati va virtual raqam xizmati">
                 </div>
