--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
             <form class="main-hero_form">
                 <h1 class="main-hero_form_heading">
-                    Контактная форма
+                    Узнать стоимость услуг
                 </h1>
 
                 <div class="main-hero_form_info_wrapper">
