--- a/index.html
+++ b/index.html
@@ -132,22 +132,44 @@
         <div class="main-hero" id="particles-js" style="background-image: url('./assets/image/yetuk-hero-bg.png');">
             <div class="section-wrapp">
                 <div class="container">
-                    <ul class="main-hero_list">
-                        <li class="main-hero_item">
-                            <h1 class="main-hero_preheading">
-                                YETUK DIGITAL
-                            </h1>
-                            <h1 class="main-hero_heading">
-                                Подготовка ценных специалистов
-                            </h1>
-                            <button class="main-hero_contact_btn form_opener box-shadow">
-                                ПОЗВОНИТЬ
-                            </button>
-                        </li>
-                        <li class="main-hero_item">
-                            <img src="./assets/image/hero_girl.png" alt="">
-                        </li>
-                    </ul>
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <ul class="main-hero_list first">
+                                <li class="main-hero_item">
+                                    <h1 class="main-hero_preheading">
+                                        YETUK DIGITAL
+                                    </h1>
+                                    <h1 class="main-hero_heading">
+                                        Qadriyatli mutaxassislar tayyorlash
+                                    </h1>
+                                    <button class="main-hero_contact_btn form_opener box-shadow">
+                                        BOG'LANISH
+                                    </button>
+                                </li>
+                                <li class="main-hero_item">
+                                    <img src="./assets/image/hero_girl.png" alt="">
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="swiper-slide">
+                            <ul class="main-hero_list second">
+                                <li class="main-hero_item">
+                                    <h1 class="main-hero_preheading">
+                                        YETUK DIGITAL
+                                    </h1>
+                                    <h1 class="main-hero_heading">
+                                        Avtomatizatsiya va Digital marketing xizmatlari
+                                    </h1>
+                                    <button class="main-hero_contact_btn form_opener box-shadow">
+                                        BOG'LANISH
+                                    </button>
+                                </li>
+                                <li class="main-hero_item">
+                                    <img src="./assets/image/hero_boy.png" alt="">
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
             <form class="main-hero_form">
